--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    background-color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
     padding: 0 20px 30px 0;
